--- a/src/index.css
+++ b/src/index.css
@@ -10,4 +10,9 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+    /* color: rgba(0, 0, 0, 0.455); */
+}
+*::-webkit-scrollbar{
+  display: none;
+
 }
